# VxBdpDemo

./: .editorconfig  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/bdp_demo/: cli.py  handlers.py  log.py  storage_layer.py
tests/: test_bdp_demo.py
tests/bdp_demo/: test_handlers.py  test_log.py  test_storage_layer.py
