[tool.poetry]
name = "bdp-demo"
version = "0.1.0"
description = ""
authors = ["Ian McGinnis <ian.mcginnis@noaa.gov>"]

[tool.poetry.scripts]
echo-s3 = "src.bdp_demo.cli:echo_s3_object"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
boto3 = "^1.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
coverage = {extras = ["toml"], version = "^5.5"}
mypy = "^0.910"
flake8 = "^3.9.2"
boto3-stubs = {extras = ["s3"], version = "^1.18.5"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["src"]

# List our modules and tests so mypy can find them
[tool.mypy]
files = [
    "src/bdp_demo/",
    "tests/"
    ]
